--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ke_qr
-description: A starting point for Dart libraries or applications.
+description: Kenya quick responce code standard library.
 version: 1.0.0
 repository: https://github.com/Rotse4/KE-QR.git
 
